feat(agent): 实现事件驱动多 Agent 编排